--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <input type="text" id="uf">
         </form>
 
-        <button id="pesquisar" onclick="consultaCep(event)">Pesquisar:</button>
+        <button id="pesquisar" onclick="consultaCep(event)">Pesquisar</button>
     </div>
 
     
